<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".StoryActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/story_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lmroman_font_family"
        android:text="@string/welcome_title"
        android:textColor="?attr/colorOnSurface"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:id="@+id/story_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintTop_toBottomOf="@id/story_title"
        app:layout_constraintBottom_toTopOf="@id/story_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/story_image_description" />

    <TextView
        android:id="@+id/story_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lmroman_font_family"
        android:text="@string/story_placeholder_text"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/button_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next"
        style="@style/Theme.Samiyura.PinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>